--- a/normativa.html
+++ b/normativa.html
@@ -57,7 +57,7 @@
 
 	  	<br />
 
-		<h3>Lleis Orgàniques - BOE</h3>
+		<h3><span class="badge bg-primary">BOE</span>    Lleis Orgàniques</h3>
 
 		<hr >
 
@@ -88,12 +88,13 @@
 		
   </div>
   
-  
+  <br />
+  <br />
+
+
   <div class="tab-pane fade show active" id="Real Decrets">
 
-	  <br />
-
-		<h3>Real Decrets - BOE</h3>
+		<h3><span class="badge bg-primary">BOE</span>    Real Decrets</h3>
 
 		<hr />
 
@@ -139,12 +140,15 @@
 
   </div>
   
+  	<br />
+  	<br />
+
   
   <div class="tab-pane fade show active" id="Decrets">
 
 		<br />
 
-		<h3>Decrets - DOGV</h3>
+		<h3><span class="badge bg-danger">DOGV</span>    Decrets</h3>
 
 		<hr />
 
@@ -191,7 +195,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">ROF INF-PRI</div>
-		  <div class="col-sm-1"><span class="badge bg-info">INF</span><span class="badge bg-info">PRI</span></div>
+		  <div class="col-sm-1"><span class="badge bg-info">INF</span>  <span class="badge bg-info">PRI</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2019/11482&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=11482&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 253/2019, de 29 de novembre, del Consell, de regulació de l'organització i el funcionament dels centres públics que imparteixen ensenyaments d'Educació Infantil o d'Educació Primària. [2019/11482]</a></div>
 		</div>
 
@@ -199,7 +203,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">ROF SEC-BAT-FP</div>
-		  <div class="col-sm-1"><span class="badge bg-info">SEC</span><span class="badge bg-info">BAT</span><span class="badge bg-info">FP</span></div>
+		  <div class="col-sm-1"><span class="badge bg-info">SEC</span>  <span class="badge bg-info">BAT</span>  <span class="badge bg-info">FP</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/resultat-dogv?signatura=2019/11616&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=11616&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 252/2019, de 29 de novembre, del Consell, de regulació de l'organització i el funcionament dels centres públics que imparteixen ensenyaments d'Educació Secundària Obligatòria, Batxillerat i Formació Professional. [2019/11616]</a></div>
 		</div>
 
@@ -207,7 +211,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Organització Orientació</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  <div class="col-sm-1"><span class="badge bg-dark">ORIENT</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/6157&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=6157&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 72/2021, de 21 de maig, del Consell, d'organització de l'orientació educativa i professional en el sistema educatiu valencià. [2021/6157]</a></div>
 		</div>
 
@@ -215,30 +219,36 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Dependència</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  <div class="col-sm-1"><span class="badge bg-dark">ORIENT</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/resultat-dogv?signatura=2022/7569&L=0" target="_blank">DECRET 102/2022, de 5 d'agost, del Consell, pel qual es modifica el Decret 62/2017, de 19 de maig, del Consell, pel qual s'estableix el procediment per a reconéixer el grau de dependència a les persones i l'accés al sistema públic de serveis i prestacions econòmiques. [2022/7569] </a></div>
 		</div>
 
-
 		<br />
 
-		<br />
+		<div class="row">
+		  <div class="col-sm-2">ROF CEE</div>
+		  <div class="col-sm-1"><span class="badge bg-danger">CEE</span></div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/resultat-dogv?signatura=2022/7584&L=0" target="_blank">DECRET 105/2022, de 5 d'agost, del Consell, d'organització i funcionament dels centres d'Educació Especial. [2022/7584] </a></div>
+		</div>
 
   </div>
+		<br />
+
+		<br />
   
   
   <div class="tab-pane fade show active" id="Ordres">
 
 	  	<br />
 
-		<h3>Ordres - DOGV</h3>
+		<h3><span class="badge bg-danger">DOGV</span>    Ordres</h3>
 
 		<hr />
 
 		<div class="row">
 		  <div class="col-sm-2">Organització Resposta Educativa</div>
-		  <div class="col-sm-1"><a href="https://ceice.gva.es/documents/169149987/174708226/PT_AL_INF.pdf"><button type="button" class="btn btn-success btn-sm" target="_blank">Infografia</button></a></div>
-		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2019/4442&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=4442&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 20/2019, de 30 d'abril, de la Conselleria d'Educació, Investigació, Cultura i Esport, per la qual es regula l'organització de la resposta educativa per a la inclusió de l'alumnat en els centres docents sostinguts amb fons públics del sistema educatiu valencià. [2019/4442]</a></div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  <div class="col-sm-8"><a href="https://ceice.gva.es/documents/169149987/174708226/PT_AL_INF.pdf"><button type="button" class="btn btn-success btn-sm" target="_blank">Infografia</button></a>    <a href="https://dogv.gva.es/va/resultat-dogv?signatura=2019/4442&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=4442&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 20/2019, de 30 d'abril, de la Conselleria d'Educació, Investigació, Cultura i Esport, per la qual es regula l'organització de la resposta educativa per a la inclusió de l'alumnat en els centres docents sostinguts amb fons públics del sistema educatiu valencià. [2019/4442]</a></div>
 		</div>
   </div>
 
@@ -254,7 +264,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Unitats Específiques Orientació</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  <div class="col-sm-1"><span class="badge bg-danger">CEE</span></div>
 		  <div class="col-sm-8"><a href=https://dogv.gva.es/va/resultat-dogv?signatura=2021/7529&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=7529&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 23/2021, de 6 de juliol, de la Conselleria d'Educació, Cultura i Esport, per la qual es determinen els criteris de creació de llocs de professorat de l'especialitat d'Orientació Educativa en els equips d'Orientació Educativa, i per la qual s'ordena la creació de les unitats especialitzades d'Orientació. [2021/7529]</a></div>
 		</div>
 
@@ -262,7 +272,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Full de notificació Atenció SocioPrisopedagògica</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  <div class="col-sm-1"><span class="badge bg-dark">ORIENT</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/7878&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=7878&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 5/2021, de 15 de juliol, de la Vicepresidència i Conselleria d'Igualtat i Polítiques Inclusives i de la Conselleria d'Educació, Cultura i Esport, per la qual s'aprova el nou full de notificació per a l'atenció socioeducativa infantil i protecció de l'alumnat menor d'edat i s'estableix la coordinació interadministrativa per a la protecció integral de la infància i adolescència. [2021/7878]</a></div>
 		</div>
 
@@ -277,15 +287,15 @@
 	  
 	  	<br />
 
-		<h3>Resolució - DOGV</h3>
+		<h3><span class="badge bg-danger">DOGV</span>    Ordres</h3>
 
 	  	<hr />
 
 		
 		<div class="row">
 		  <div class="col-sm-2">Detecció i Atenció Precoç</div>
-		  <div class="col-sm-1"><a href="https://ceice.gva.es/va/web/inclusioeducativa/protocols"><button type="button" class="btn btn-success btn-sm" target="_blank">Protocols</button></a></div>
-		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2017/11874&L=0&&texto=&solo_titulo=1&anyo_codigo=2017&codigo=11874&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ conjunta d'11 de desembre de 2017 de la Conselleria d'Educació, Investigació, Cultura i Esport i de la Conselleria de Sanitat Universal i Salut Pública per la qual es dicten instruccions per a la detecció i l'atenció precoç de l'alumnat que puga presentar un problema de salut mental. [2017/11874]</a></div>
+		  <div class="col-sm-1"><span class="badge bg-dark">ORIENT</span></div>
+		  <div class="col-sm-8"><a href="https://ceice.gva.es/va/web/inclusioeducativa/protocols"><button type="button" class="btn btn-success btn-sm" target="_blank">Protocols</button></a>    <a href="https://dogv.gva.es/va/resultat-dogv?signatura=2017/11874&L=0&&texto=&solo_titulo=1&anyo_codigo=2017&codigo=11874&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ conjunta d'11 de desembre de 2017 de la Conselleria d'Educació, Investigació, Cultura i Esport i de la Conselleria de Sanitat Universal i Salut Pública per la qual es dicten instruccions per a la detecció i l'atenció precoç de l'alumnat que puga presentar un problema de salut mental. [2017/11874]</a></div>
 		</div>
 
 	  <br />
@@ -302,14 +312,6 @@
 		  <div class="col-sm-2">Problemes de salut crònica</div>
 		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2018/5900&L=0&&texto=&solo_titulo=1&anyo_codigo=2018&codigo=5900&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 13 de juny de 2018, de la Conselleria d'Educació, Investigació, Cultura i Esport i de la Conselleria de Sanitat Universal i Salut Pública, per la qual es dicten instruccions i orientacions d'atenció sanitària específica en centres educatius per a regular l'atenció sanitària a l'alumnat amb problemes de salut crònica en horari escolar, l'atenció a la urgència, així com l'administració de medicaments i l'existència de farmacioles en els centres escolars. [2018/5900]</a></div>
-		</div>
-
-		<br />	
-
-		<div class="row">
-		  <div class="col-sm-2">ROF Centre Específic</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
-		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2020/6396&L=0&&texto=&solo_titulo=1&anyo_codigo=2020&codigo=6396&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 31 juliol de 2020, de la directora general d'Inclusió Educativa, per la qual es regula, amb caràcter experimental, l'organització dels centres específics d'Educació Especial de titularitat de la Generalitat com a centres de recursos. [2020/6396]</a></div>
 		</div>
 
 		<br />	
@@ -332,7 +334,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Detecció i Identificació NESE</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  <div class="col-sm-1"><span class="badge bg-dark">ORIENT</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/13042&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=13042&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 23 de desembre de 2021, de la directora general d'Inclusió Educativa, per la qual es dicten instruccions per a la detecció i la identificació de les necessitats específiques de suport educatiu i les necessitats de compensació de desigualtats. [2021/13042]</a></div>
 		</div>
 
@@ -364,7 +366,7 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">2022-2023 Instruccions INF-PRI</div>
-		  <div class="col-sm-1"><span class="badge bg-info">INF</span><span class="badge bg-info">PRI</span></div>
+		  <div class="col-sm-1"><span class="badge bg-info">INF</span>  <span class="badge bg-info">PRI</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6454&L=0" target="_blank"> RESOLUCIÓ de 5 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual s'aproven les instruccions per a l'organització i el funcionament dels centres que imparteixen Educació Infantil de segon cicle i Educació Primària durant el curs 2022-2023. [2022/6454]</a></div>
 		</div>
 		
@@ -372,7 +374,7 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">2022-2023 SEC-BAT</div>
-		  <div class="col-sm-1"><span class="badge bg-info">ESO</span><span class="badge bg-info">BAT</span></div>
+		  <div class="col-sm-1"><span class="badge bg-info">ESO</span>  <span class="badge bg-info">BAT</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6761&L=0i" target="_blank">RESOLUCIÓ de 12 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual s'aproven les instruccions per a l'organització i el funcionament dels centres que imparteixen Educació Secundària Obligatòria i Batxillerat durant el curs 2022-2023 [2022/6761]</a></div>
 		</div>
 		
@@ -381,7 +383,7 @@
 	
 		<div class="row">
 		  <div class="col-sm-2">2022-2023 Instruccions CEE</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  <div class="col-sm-1"><span class="badge bg-danger">CEE</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/7099&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=7099&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 21 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual es dicten instruccions per a l'organització i el funcionament dels centres d'educació especial sostinguts amb fons públics per al curs 2022-2023. [2022/7099]</a></div>
 		</div>
 		
@@ -399,7 +401,7 @@
  
   <div class="tab-pane fade show active" id="Resolució">
 	  <br />
-		<h3>Instruccions - Conselleria d'Educació, Cultura i Esport</h3>
+		<h3><span class="badge bg-dark">GVA</span>    Instruccions</h3>
 
 		<hr />
 
@@ -408,7 +410,6 @@
 		<div class="row">
 		  <div class="col-sm-2">Educadors</div>
 		  <div class="col-sm-1"><a href="https://ceice.gva.es/va/web/inclusioeducativa/personal-no-docent/normativa"><button type="button" class="btn btn-danger btn-sm" target="_blank">NO DOCENT</button></a></div>
-		  <div class="col-sm-1"><span class="badge bg-primary">GVA</span></div>
 		  <div class="col-sm-8"><a href="https://ceice.gva.es/documents/169149987/172998495/Instruccio_DGIE_PEEE.pdf" target="_blank">INSTRUCCIÓ DE LA DIRECTORA GENERAL D’INCLUSIÓ EDUCATIVA PER LA QUAL S’ESTABLEIXEN ELS PROCEDIMENTS PER A LA REALITZACIÓ DE LES PROPOSTES DE REDISTRIBUCIÓ,AMPLIACIÓ,CREACIÓ O AMORTITZACIÓ DELS LLOCS DE PERSONAL EDUCADOR D’EDUCACIÓ ESPECIAL EN CENTRES DOCENTS DE TITULARITAT DE LA GENERALITAT</a></div>
 		</div>
 		
@@ -419,7 +420,6 @@
 		<div class="row">
 		  <div class="col-sm-2">Unitats Específiques</div>
 		  <div class="col-sm-1"><a href="https://ceice.gva.es/va/web/inclusioeducativa/escolaritzacio"><button type="button" class="btn btn-warning btn-sm" target="_blank">ESCOLARIT.</button></a></div>
-		  <div class="col-sm-1"><span class="badge bg-primary">GVA</span></div>
 		  <div class="col-sm-8"><a href="https://ceice.gva.es/documents/169149987/172118798/Instruccions_procediments_UE_2022_2023.pdf" target="_blank">Habilitació, modificació i no funcionament unitats específiques, curs 2022-2023 / Instruccions de la directora general d'Inclusió Educativa sobre el procediment d'habilitació, modificació i no funcionament d'unitats específiques ubicades en centres ordinaris d'educació primària i educació secundària de titularitat de la Generalitat Valenciana per al curs 2022/23</a></div>
 		</div>
 		
