--- a/digital.html
+++ b/digital.html
@@ -249,6 +249,40 @@
 
 		</div>
 
+		<br/>
+		
+		<div class="row">
+		    <div class="col-sm-2">Educación 2030</div>
+        <div class="col-sm-1"><span class="badge bg-success">GLOBAL</span></div>
+		    <div class="col-sm-8"><a href="https://unesdoc.unesco.org/ark:/48223/pf0000245656_spa" target="_blank">Declaración de Incheon y Marco de Acción para la realización del Objetivo de Desarrollo Sostenible 4</a></div>
+
+		</div>
+
+		<br/>
+		
+		<div class="row">
+		    <div class="col-sm-2">Informe DeSeCo</div>
+        <div class="col-sm-1"><span class="badge bg-success">GLOBAL</span></div>
+		    <div class="col-sm-8"><a href="https://www.deseco.ch/bfs/deseco/en/index/03/02.parsys.78532.downloadList.94248.DownloadFile.tmp/2005.dscexecutivesummary.sp.pdf" target="_blank">Informe DeSeCo. Resumen ejecutivo</a></div>
+
+		</div>
+    
+		<br/>
+		
+		<div class="row">
+		    <div class="col-sm-2">OCDE. Education 2030</div>
+        <div class="col-sm-1"><span class="badge bg-success">GLOBAL</span></div>
+		    <div class="col-sm-8"><a href="https://www.oecd.org/education/2030-project/" target="_blank">OCDE. Education 2030. Resources</a></div>
+
+		</div>
+		<br/>
+		
+		<div class="row">
+		    <div class="col-sm-2">Building the future of education</div>
+        <div class="col-sm-1"><span class="badge bg-success">GLOBAL</span></div>
+		    <div class="col-sm-8"><a href="https://www.oecd.org/education/future-of-education-brochure.pdf" target="_blank">Building the future of education</a></div>
+
+		</div>
 		<br />
 		
   </div>
