--- a/digital.html
+++ b/digital.html
@@ -275,14 +275,23 @@
 		    <div class="col-sm-8"><a href="https://www.oecd.org/education/2030-project/" target="_blank">OCDE. Education 2030. Resources</a></div>
 
 		</div>
+
 		<br/>
 		
 		<div class="row">
 		    <div class="col-sm-2">Building the future of education</div>
-        <div class="col-sm-1"><span class="badge bg-success">GLOBAL</span></div>
+		    <div class="col-sm-1"><span class="badge bg-success">GLOBAL</span></div>
 		    <div class="col-sm-8"><a href="https://www.oecd.org/education/future-of-education-brochure.pdf" target="_blank">Building the future of education</a></div>
-
 		</div>
+
+		<br />
+
+		<div class="row">
+		    <div class="col-sm-2">Making Lifelong learning a reality</div>
+		    <div class="col-sm-1"><span class="badge bg-success">UNESCO</span></div>
+		    <div class="col-sm-8"><a href="unesdoc.unesco.org/in/rest/annotationSVC/DownloadWatermarkedAttachment/attach_import_dda41bab-f16f-4fa1-9834-159a387c0afe?_=381857eng.pdf&to=197&from=1" target="_blank">Making Lifelong a reality</a></div>
+		</div>
+
 		<br />
 		
   </div>
