--- a/digital.html
+++ b/digital.html
@@ -287,12 +287,30 @@
 		<br />
 
 		<div class="row">
-		    <div class="col-sm-2">Making Lifelong learning a reality</div>
+		    <div class="col-sm-2">Lifelong learning</div>
 		    <div class="col-sm-1"><span class="badge bg-success">UNESCO</span></div>
 		    <div class="col-sm-8"><a href="unesdoc.unesco.org/in/rest/annotationSVC/DownloadWatermarkedAttachment/attach_import_dda41bab-f16f-4fa1-9834-159a387c0afe?_=381857eng.pdf&to=197&from=1" target="_blank">Making Lifelong a reality</a></div>
 		</div>
 
 		<br />
+
+		<div class="row">
+		    <div class="col-sm-2">Inclusió</div>
+		    <div class="col-sm-1"><span class="badge bg-success">UNESCO</span></div>
+		    <div class="col-sm-8"><a href="https://unesdoc.unesco.org/in/documentViewer.xhtml?v=2.1.196&id=p::usmarcdef_0000375748&file=/in/rest/annotationSVC/DownloadWatermarkedAttachment/attach_import_dd4da310-fa57-4605-a487-d2cdf8318bbf%3F_%3D375748spa.pdf&locale=es&multi=true&ark=/ark:/48223/pf0000375748/PDF/375748spa.pdf#2268_19%20Towards%20inclusion%20S.indd%3A.3656%3A60" target="_blank">Hacia la inclusión en la educación: Situación, tendencias y desafios</a></div>
+		</div>
+
+		<br />
+
+		<div class="row">
+		    <div class="col-sm-2">Inclusió</div>
+		    <div class="col-sm-1"><span class="badge bg-success">UNESCO</span></div>
+		    <div class="col-sm-8"><a href="https://www.european-agency.org/Espa%C3%B1ol/publications" target="_blank">Publicacions Inclusiva</a></div>
+		</div>
+
+		<br />
+		
+		
 		
   </div>
 
