--- a/digital.html
+++ b/digital.html
@@ -310,6 +310,13 @@
 
 		<br />
 		
+		<div class="row">
+		    <div class="col-sm-2">Inclusió</div>
+		    <div class="col-sm-1"><span class="badge bg-success">UNESCO</span></div>
+		    <div class="col-sm-8"><a href="https://www.european-agency.org/sites/default/files/Inclusive_Digital_Education.pdf" target="_blank">Inclusive Digital Education</a></div>
+		</div>
+
+		<br />
 		
 		
   </div>
