--- a/digital.html
+++ b/digital.html
@@ -318,6 +318,14 @@
 
 		<br />
 		
+		<div class="row">
+		    <div class="col-sm-2">EU TIC</div>
+		    <div class="col-sm-1"><span class="badge bg-success">EU</span></div>
+		    <div class="col-sm-8"><a href="https://ec.europa.eu/info/strategy/priorities-2019-2024/europe-fit-digital-age_es" target="_blank">Europa adaptada a la era digital</a></div>
+		</div>
+
+		<br />
+		
 		
   </div>
 
