Llei General de Comunicació Audiovisual

--- a/digital.html
+++ b/digital.html
@@ -85,7 +85,6 @@
 	</div>
 	
 	<br/>
-	
 
 	<div class="row">
 	  <div class="col-sm-2">Protecció de Dades</div>
@@ -95,6 +94,14 @@
 	</div>
 	
 	<br/>
+
+	<div class="row">
+	  <div class="col-sm-2">Llei General de Comunicació Audivisual</div>
+	  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-11311&p=20220708&tn=2" target="_blank"><button type="button" class="btn btn-info btn-sm" target="_blank"> Index</button></a></div>
+	  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-11311&p=20220708&tn=1" target="_blank">Ley 13/2022, de 7 de julio, General de Comunicación Audiovisual. </a></div>
+
+	</div>
+	
 	
 </div>
 
