--- a/normativa.html
+++ b/normativa.html
@@ -108,32 +108,32 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Ensenyaments Mínims Infantil</div>
-		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-1654&p=20220202&tn=2"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
-		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-1654" target="_blank">Real Decreto 95/2022, de 1 de febrero, por el que se establece la ordenación y las enseñanzas mínimas de la Educación Infantil.</a></div>
+		  <div class="col-sm-1"><span class="badge bg-info">INF</span></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-1654&p=20220202&tn=2" target="_blank">Real Decreto 95/2022, de 1 de febrero, por el que se establece la ordenación y las enseñanzas mínimas de la Educación Infantil.</a></div>
 		</div>
 
 		<br />
 
 		<div class="row">
 		  <div class="col-sm-2">Ensenyaments Mínims Primària</div>
-		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-3296&p=20220302&tn=2"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
-		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-3296&p=20220302&tn=1" target="_blank">Real Decreto 157/2022, de 1 de marzo, por el que se establecen la ordenación y las enseñanzas mínimas de la Educación Primaria.</a></div>
+		  <div class="col-sm-1"><span class="badge bg-info">PRI</span></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-3296&p=20220302&tn=2" target="_blank">Real Decreto 157/2022, de 1 de marzo, por el que se establecen la ordenación y las enseñanzas mínimas de la Educación Primaria.</a></div>
 		</div>
 
 		<br />
 
 		<div class="row">
 		  <div class="col-sm-2">Ensenyaments Mínims Secundària</div>
-		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-4975&p=20220330&tn=2"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
-		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-4975" target="_blank">Real Decreto 217/2022, de 29 de marzo, por el que se establece la ordenación y las enseñanzas mínimas de la Educación Secundaria Obligatoria.</a></div>
+		  <div class="col-sm-1"><span class="badge bg-info">SEC</span></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-4975&p=20220330&tn=2" target="_blank">Real Decreto 217/2022, de 29 de marzo, por el que se establece la ordenación y las enseñanzas mínimas de la Educación Secundaria Obligatoria.</a></div>
 		</div>
 
 		<br />
 
 		<div class="row">
 		  <div class="col-sm-2">Ensenyaments Mínims Batxillerat</div>
-		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-5521&p=20220406&tn=2"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
-		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-5521" target="_blank">Real Decreto 243/2022, de 5 de abril, por el que se establecen la ordenación y las enseñanzas mínimas del Bachillerato. </a></div>
+		  <div class="col-sm-1"><span class="badge bg-info">BAT</span></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-5521&p=20220406&tn=2" target="_blank">Real Decreto 243/2022, de 5 de abril, por el que se establecen la ordenación y las enseñanzas mínimas del Bachillerato. </a></div>
 		</div>
 
 		<br />
