--- a/formacio.html
+++ b/formacio.html
@@ -74,6 +74,39 @@
   </div>
 
 
+  <div class="tab-pane fade show active" id="Curriculum">
+
+	  	<br />
+
+		<h3>CEFIRE</h3>
+		<div class="row">
+		  <div class="col-sm-2">Formació Docent</div>
+		  <div class="col-sm-1">Entorn</div>
+		  <div class="col-sm-8"><a href="https://ceice.gva.es/es/web/formacion-profesorado/proyectos-de-formacion-en-centros" target="_blank">Programa d'Activitats Formatives</a></div>
+
+		</div>
+
+		<br/>
+
+  </div>
+
+
+  <div class="tab-pane fade show active" id="Curriculum">
+
+	  	<br />
+
+		<h3>Webinar</h3>
+		<div class="row">
+		  <div class="col-sm-2">Currículum LOMLOE</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://www.youtube.com/watch?v=6K_MeoXy0Hc" target="_blank">Anaya. Currículum i Metodologia LOMLOE</a></div>
+
+		</div>
+
+		<br/>
+
+  </div>
+
   <div class="tab-pane fade show active" id="Publicacions">
 
 	  	<br />
