--- a/formacio.html
+++ b/formacio.html
@@ -74,11 +74,12 @@
   </div>
 
 
-  <div class="tab-pane fade show active" id="Curriculum">
+  <div class="tab-pane fade show active" id="CEFIRE">
 
 	  	<br />
 
 		<h3>CEFIRE</h3>
+
 		<div class="row">
 		  <div class="col-sm-2">Formació Docent</div>
 		  <div class="col-sm-1">Entorn</div>
@@ -96,11 +97,17 @@
 	  	<br />
 
 		<h3>Webinar</h3>
+
 		<div class="row">
-		  <div class="col-sm-2">Currículum LOMLOE</div>
+		  <div class="col-sm-2">LOMLOEi #01</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://youtu.be/Cz4U_HlvqRo" target="_blank">Anaya.LOMLOE</a></div>
+		</div>
+
+		<div class="row">
+		  <div class="col-sm-2">LOMLOE</div>
 		  <div class="col-sm-1">INDEX</div>
 		  <div class="col-sm-8"><a href="https://www.youtube.com/watch?v=6K_MeoXy0Hc" target="_blank">Anaya. Currículum i Metodologia LOMLOE</a></div>
-
 		</div>
 
 		<br/>
