--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <li class="nav-item">
           <a class="nav-link" href="./digital.html">Digital</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./files/qr.png">qr</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -49,7 +52,7 @@
     <a class="btn btn-info" href="./digital.html" role="button">Competència Digital</a>
     <br />
     <br />
-    <span class="badge bg-light ">Actualitzat <br /> 29.08.2022</span>
+    <span class="badge bg-light ">Actualitzat <br /> 03.09.2022</span>
   </div>
   <!-- Jumbotron -->
 
