Programació de Primària

--- a/formacio.html
+++ b/formacio.html
@@ -99,7 +99,7 @@
 		<h3>Webinar</h3>
 
 		<div class="row">
-		  <div class="col-sm-2">LOMLOEi #01</div>
+		  <div class="col-sm-2">LOMLOE #01</div>
 		  <div class="col-sm-1">INDEX</div>
 		  <div class="col-sm-8"><a href="https://youtu.be/Cz4U_HlvqRo" target="_blank">Anaya.LOMLOE</a></div>
 		</div>
@@ -108,6 +108,12 @@
 		  <div class="col-sm-2">LOMLOE</div>
 		  <div class="col-sm-1">INDEX</div>
 		  <div class="col-sm-8"><a href="https://www.youtube.com/watch?v=6K_MeoXy0Hc" target="_blank">Anaya. Currículum i Metodologia LOMLOE</a></div>
+		</div>
+
+		<div class="row">
+		  <div class="col-sm-2">Programació - ANPE. Primària</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://youtu.be/ZNnA0c5M69Y" target="_blank">Proposta de guió de programació de primària</a></div>
 		</div>
 
 		<br/>
