--- a/formacio.html
+++ b/formacio.html
@@ -99,21 +99,21 @@
 		<h3>Webinar</h3>
 
 		<div class="row">
-		  <div class="col-sm-2">LOMLOE #01</div>
+		  <div class="col-sm-2">LOMLOE</div>
                   <div class="col-sm-1"><span class="badge bg-primary">NORMATIVA</span></div>
-		  <div class="col-sm-8"><a href="https://youtu.be/Cz4U_HlvqRo" target="_blank">Anaya.LOMLOE</a></div>
+		  <div class="col-sm-8"><a href="https://youtu.be/Cz4U_HlvqRo" target="_blank">LOMLOE - ANAYA</a></div>
 		</div>
 
 		<div class="row">
 		  <div class="col-sm-2">Currículum</div>
-		  <div class="col-sm-1">INDEX</div>
-		  <div class="col-sm-8"><a href="https://www.youtube.com/watch?v=6K_MeoXy0Hc" target="_blank">Currículum i Metodologia. ANAYA</a></div>
+                  <div class="col-sm-1"><span class="badge bg-danger">CURRICULUM</span></div>
+		  <div class="col-sm-8"><a href="https://www.youtube.com/watch?v=6K_MeoXy0Hc" target="_blank">Currículum i Metodologia - ANAYA</a></div>
 		</div>
 
 		<div class="row">
 		  <div class="col-sm-2">Programació</div>
-                  <div class="col-sm-1"><span class="badge bg-primary">CURRICULUM</span></div>
-		  <div class="col-sm-8"><a href="https://youtu.be/ZNnA0c5M69Y" target="_blank">Primària. ANPE</a></div>
+                  <div class="col-sm-1"><span class="badge bg-danger">CURRICULUM</span></div>
+		  <div class="col-sm-8"><a href="https://youtu.be/ZNnA0c5M69Y" target="_blank">Primària - ANPE</a></div>
 		</div>
 
 		<br/>
@@ -127,7 +127,7 @@
 		<h3>Publicacions</h3>
 		<div class="row">
 		  <div class="col-sm-2">Revista d'Educació</div>
-                  <div class="col-sm-1"><span class="badge bg-primary">FONTS</span></div>
+                  <div class="col-sm-1"><span class="badge bg-info">FONTS</span></div>
 		  <div class="col-sm-8"><a href="https://www.educacionyfp.gob.es/revista-de-educacion/inicio.html" target="_blank">Revista d'Educació</a></div>
 
 		</div>
