--- a/formacio.html
+++ b/formacio.html
@@ -106,13 +106,13 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Currículum</div>
-                  <div class="col-sm-1"><span class="badge bg-danger">CURRI</span></div>
+                  <div class="col-sm-1"><span class="badge bg-danger">CURRIC</span></div>
 		  <div class="col-sm-8"><a href="https://www.youtube.com/watch?v=6K_MeoXy0Hc" target="_blank">Currículum i Metodologia - ANAYA</a></div>
 		</div>
 
 		<div class="row">
 		  <div class="col-sm-2">Programació</div>
-                  <div class="col-sm-1"><span class="badge bg-danger">CURRI</span></div>
+                  <div class="col-sm-1"><span class="badge bg-danger">CURRIC</span></div>
 		  <div class="col-sm-8"><a href="https://youtu.be/ZNnA0c5M69Y" target="_blank">Primària - ANPE</a></div>
 		</div>
 
