Llei Llibertat Sexual

--- a/normativa.html
+++ b/normativa.html
@@ -72,17 +72,27 @@
 		<br/>
 		
 		<div class="row">
-			<div class="col-sm-2">LOMCE</div>
-			<div class="col-sm-1"><span class="badge bg-dark">DEROG.</span></div>
-			<div class="col-sm-8"><a href="https://boe.es/buscar/act.php?id=BOE-A-2013-12886" target="_blank">Ley Orgánica 8/2013, de 9 de diciembre, para la mejora de la calidad educativa.</a></div>
+			  <div class="col-sm-2">LOMCE</div>
+			  <div class="col-sm-1"><span class="badge bg-dark">DEROG.</span></div>
+			  <div class="col-sm-8"><a href="https://boe.es/buscar/act.php?id=BOE-A-2013-12886" target="_blank">Ley Orgánica 8/2013, de 9 de diciembre, para la mejora de la calidad educativa.</a></div>
 		</div>
 
 		<br/>
 
 		<div class="row">
 		  	<div class="col-sm-2">LOMLOE</div>
-			<div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+			  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  	<div class="col-sm-8"><a href="https://boe.es/buscar/doc.php?id=BOE-A-2020-17264" target="_blank">Ley Orgánica 3/2020, de 29 de diciembre, por la que se modifica la Ley Orgánica 2/2006, de 3 de mayo, de Educación.</a></div>
+		</div>
+
+        <br />
+
+		<div class="row">
+		  	<div class="col-sm-2">Llibertat sexual</div>
+			  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+        <div class="col-sm-8"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-14630&p=20220907&tn=2" target="_blank">Ley Orgánica 10/2022, de 6 de septiembre, de garantía integral de la libertad sexual.</a> <br />Título II. Prevención y detección. Capítulo I. Medidas de prevención y sensibilización. Artículo 7. Prevención y sensibilización en el ámbito educativo. <br />
+Título II. Prevención y detección. Capítulo II. Detección de las violencias sexuales. Artículo 19. Detección y respuesta en el ámbito educativo. <br />
+Título III. Formación. Artículo 23. Garantía de especialización profesional a través de la formación. Artículo 24. Formación en el ámbito docente y educativo. <br /></div>
 
 		</div>
 		
