--- a/normativa.html
+++ b/normativa.html
@@ -416,6 +416,15 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 		</div>
 		
 		
+		<div class="row">
+		  <div class="col-sm-2">PGAA
+			<br />
+			<a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/8074&L=0"><button type="button" class="btn btn-primary btn-sm" target="_blank">EDU</button></a></div>
+		  <div class="col-sm-1"><span class="badge bg-light">NODOC</span></div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/8074&L=0" target="_blank">
+			  RESOLUCIÓ de 2 de setembre de 2022, de la Secretaria Autonòmica d'Educació i Formació Professional, per la qual s'aprova el Pla general d'actuació anual (PGAA) i el Pla institucional de formació i actualització professional de la Inspecció d'Educació de la Comunitat Valenciana per al curs 2022-2023. [2022/8074]</a></div>
+		</div>
+		
  
   <div class="tab-pane fade show active" id="Instruccions">
 	  <br />
