Webinar LOMLOE Situacions Aprenentatge

--- a/formacio.html
+++ b/formacio.html
@@ -111,9 +111,16 @@
 		</div>
 
 		<div class="row">
+		  <div class="col-sm-2">Currículum</div>
+                  <div class="col-sm-1"><span class="badge bg-danger">CURRIC</span></div>
+		  <div class="col-sm-8"><a href="https://www.youtube.com/watch?v=6S-vETeYVGc" target="_blank">Cursos de Formación en Red del Profesorado sobre el Nuevo Currículum derivado de la LOMLOE</a><br />Visualitzar minut 50:51, parta de situacions d'aprenentatge i proposa un plantilla per programar-les.</div>
+		</div>
+
+
+		<div class="row">
 		  <div class="col-sm-2">Programació</div>
                   <div class="col-sm-1"><span class="badge bg-danger">CURRIC</span></div>
-		  <div class="col-sm-8"><a href="https://youtu.be/ZNnA0c5M69Y" target="_blank">Primària - ANPE</a></div>
+		  <div class="col-sm-8"><a href="https://youtu.be/ZNnA0c5M69Y" target="_blank">Primària - ANPE</a>. Proposen unes <a href="https://www.anpecomunidadvalenciana.es/notices/169963/Gu%C3%ADas-LOMLOE%2c-DEL-DECRETO-A-LA-PROGRAMACI%C3%93N-DE-AULA-por-etapas-educativas"> guies de programació</a>.</div>
 		</div>
 
 		<br/>
