--- a/normativa.html
+++ b/normativa.html
@@ -148,6 +148,15 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 
 		<br />
 
+		<div class="row">
+		  <div class="col-sm-2">Curriculum de Religión Islámica</div>
+		  <div class="col-sm-1"><span class="badge bg-info">INF</span> <span class="badge bg-info">PRI</span> <span class="badge bg-info">SEC</span> <span class="badge bg-info">BAT</span></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-15418&p=20220922&tn=2" target="_blank">Resolución de 16 de septiembre de 2022, de la Secretaría de Estado de Educación, por la que se publican los currículos de la enseñanza de religión islámica correspondientes a Educación Infantil, Educación Primaria, Educación Secundaria Obligatoria y Bachillerato. </a></div>
+
+		</div>
+
+		<br />
+
   </div>
   
   	<br />
