--- a/normativa.html
+++ b/normativa.html
@@ -296,6 +296,16 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 		</div>
 
 		<br />
+		
+		<div class="row">
+			<div class="col-sm-2">Estabilització</div>
+		  	<div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  	<div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/10817&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=10817&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+			ORDRE 66/2022, de 15 de novembre, de la Conselleria d'Educació, Cultura i Esport, per la qual es convoca un procediment selectiu extraordinari d'estabilització per a l'ingrés, mitjançant concurs de mèrits, al cos de mestres i als cossos de professors d'Ensenyament Secundari, professors especialistes en sectors singulars de Formació Professional, professors d'escoles oficials d'idiomes, catedràtics de Música i Arts Escèniques, professors de Música i Arts Escèniques, professors d'Arts Plàstiques i Disseny i mestres de taller d'Arts Plàstiques i Disseny. [2022/10817]
+			</a></div>
+		
+
+		<br />
 
 
   </div>
@@ -431,6 +441,27 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 		  	<div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/8074&L=0" target="_blank">
 			  RESOLUCIÓ de 2 de setembre de 2022, de la Secretaria Autonòmica d'Educació i Formació Professional, per la qual s'aprova el Pla general d'actuació anual (PGAA) i el Pla institucional de formació i actualització professional de la Inspecció d'Educació de la Comunitat Valenciana per al curs 2022-2023. [2022/8074]</a></div>
 		</div>
+
+		<br />
+		
+		<div class="row">
+			<div class="col-sm-2">Treballador social<br />Terapèuta Ocupacional<br />Educador Social</div>
+		  	<div class="col-sm-1">
+				<span class="badge bg-primary">EDU</span>
+			</div>
+		  	<div class="col-sm-8">
+				<a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/10755&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=10755&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+					RESOLUCIÓ de 14 de novembre de 2022, de la directora general d'Inclusió Educativa, per la qual es determinen les tasques del personal treballador social, educador social i terapeuta ocupacional adscrit a les unitats especialitzades d'orientació. [2022/10755]
+				</a>
+			</div>
+		</div>
+	
+</div>
+	
+</div>
+
+
+
 		
  
   <div class="tab-pane fade show active" id="Instruccions">
