--- a/normativa.html
+++ b/normativa.html
@@ -254,6 +254,18 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 		<br />
 
 		<br />
+
+		<div class="row">
+		  <div class="col-sm-2">Funció Pública</div>
+		  <div class="col-sm-1"><span class="badge bg-danger">EDU</span></div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/8683&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=8683&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+				  DECRET LLEI 12/2022, de 23 de setembre, del Consell, pel qual es modifica la Llei 4/2021, de 16 d'abril, de la Generalitat, de la Funció Pública Valenciana. [2022/8683]
+			  </a></div>
+		</div>
+
+  </div>
+
+		<br />
   
   
   <div class="tab-pane fade show active" id="Ordres">
