--- a/normativa.html
+++ b/normativa.html
@@ -363,6 +363,26 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 
   </div>
   
+
+
+
+  <div class="tab-pane fade show active" id="Real Decrets">
+
+		<h3><span class="badge bg-primary">BOE</span>    Resolucions</h3>
+
+		<hr />
+		<br />
+		
+		<div class="row">
+			<div class="col-sm-2">Estabilització</div>
+		  	<div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  	<div class="col-sm-8">
+				<a href="https://www.boe.es/buscar/doc.php?id=BOE-A-2022-18675" target="_blank">
+					Resolución de 8 de noviembre de 2022, de la Dirección General de Evaluación y Cooperación Territorial, por la que se publica el Acuerdo de la Conferencia Sectorial de Educación, sobre el procedimiento aplicable a la convocatoria excepcional de estabilización de empleo temporal de larga duración a que se refieren las disposiciones adicionales sexta y octava de la Ley 20/2021, de 28 de diciembre, de medidas urgentes para la reducción de la temporalidad en el empleo público.
+			</a>
+			</div>
+
+  </div>
   
   <div class="tab-pane fade show active" id="Resolució">
 
