Decret Igualtat i Convivència

--- a/normativa.html
+++ b/normativa.html
@@ -284,14 +284,24 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
   </div>
 		<br />
 
-		<br />
-
 		<div class="row">
 		  <div class="col-sm-2">Funció Pública</div>
 		  <div class="col-sm-1"><span class="badge bg-danger">EDU</span></div>
 		  <div class="col-sm-8">
 			  <a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/8683&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=8683&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
 				  DECRET LLEI 12/2022, de 23 de setembre, del Consell, pel qual es modifica la Llei 4/2021, de 16 d'abril, de la Generalitat, de la Funció Pública Valenciana. [2022/8683]</a>
+		  </div>
+		</div>
+
+
+		<br />
+
+		<div class="row">
+		  <div class="col-sm-2">Igualtat i Convivència</div>
+		  <div class="col-sm-1"><span class="badge bg-danger">EDU</span></div>
+		  <div class="col-sm-8">
+			  <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2022&codigo=10681&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+				  DECRET 195/2022, de 11 de novembre, del Consell, d'igualtat i convivència en el sistema educatiu valencià. [2022/10681]</a>
 		  </div>
 		</div>
 
