--- a/normativa.html
+++ b/normativa.html
@@ -376,7 +376,7 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 
 
 
-  <div class="tab-pane fade show active" id="Real Decrets">
+  <div class="tab-pane fade show active" id="Resolucions">
 
 		<h3><span class="badge bg-primary">BOE</span>    Resolucions</h3>
 
@@ -391,7 +391,18 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 					Resolución de 8 de noviembre de 2022, de la Dirección General de Evaluación y Cooperación Territorial, por la que se publica el Acuerdo de la Conferencia Sectorial de Educación, sobre el procedimiento aplicable a la convocatoria excepcional de estabilización de empleo temporal de larga duración a que se refieren las disposiciones adicionales sexta y octava de la Ley 20/2021, de 28 de diciembre, de medidas urgentes para la reducción de la temporalidad en el empleo público.
 			</a>
 			</div>
+		</div>
 
+		<br />
+		
+		<div class="row">
+			<div class="col-sm-2">Documentació</div>
+		  <div class="col-sm-1"><span class="badge bg-info">PRI</span></div>
+		 	<div class="col-sm-8">
+				<a href="https://boe.es/buscar/act.php?id=BOE-A-2022-19486" target="_blank">
+          Resolución de 17 de noviembre de 2022, de la Secretaría de Estado de Educación, por la que se establecen los modelos de los documentos oficiales de evaluación de Educación Primaria para el ámbito de gestión del Ministerio de Educación y Formación Profesional.
+        </a>
+			</div>
   </div>
   
   <div class="tab-pane fade show active" id="Resolució">
