--- a/digital.html
+++ b/digital.html
@@ -332,7 +332,22 @@
 		</div>
 
 		<br />
-		
+
+		<div class="row">
+		    <div class="col-sm-2">Aula del Futuro</div>
+		    <div class="col-sm-1"><span class="badge bg-success">INTEF</span></div>
+		    <div class="col-sm-8"><a href="https://intef.es/tecnologia-educativa/aula-de-futuro/" target="_blank">Aula del Futuro</a></div>
+		</div>
+
+		<br />
+
+		<div class="row">
+		    <div class="col-sm-2">Aules Transformadores</div>
+		    <div class="col-sm-1"><span class="badge bg-success">GVA</span></div>
+		    <div class="col-sm-8"><a href="https://portal.edu.gva.es/aulestransformadores/recursos/metodogiesiestrategies/" target="_blank">Aules Transformadores</a></div>
+		</div>
+
+		<br />
 		
   </div>
 
