--- a/normativa.html
+++ b/normativa.html
@@ -654,18 +654,16 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 			  </a>
 		  </div>
 		</div>
-		<div class="row">
-		    <div class="col-sm-2">Aula del Futuro</div>
-		    <div class="col-sm-1"><span class="badge bg-success">INTEF</span></div>
-		    <div class="col-sm-8"><a href="https://intef.es/tecnologia-educativa/aula-de-futuro/" target="_blank">Aula del Futuro</a></div>
-		</div>
 
-		<br />
-
-		<div class="row">
-		    <div class="col-sm-2">Aules Transformadores</div>
-		    <div class="col-sm-1"><span class="badge bg-success">GVA</span></div>
-		    <div class="col-sm-8"><a href="https://portal.edu.gva.es/aulestransformadores/recursos/metodogiesiestrategies/" target="_blank">Aules Transformadores</a></div>
+		<br />															 															 
+																		 		<div class="row">
+		  <div class="col-sm-2">Calendari Procediments NESE 2023-2024<br />
+		  <a href="https://ceice.gva.es/va/web/inclusioeducativa/escolaritzacio"><button type="button" class="btn btn-light btn-sm" target="_blank">ESCOLARIT</button></a></div>
+		  <div class="col-sm-1"><span class="badge bg-light">NODOC</span></div>
+		  <div class="col-sm-8">
+			  <a href="https://ceice.gva.es/documents/169149987/175397189/Calendari_de_procediments_NESE_NCD_2023_2024.pdf" target="_blank">Habilitació, modificació i no funcionament unitats específiques, curs 2022-2023 / Instruccions de la directora general d'Inclusió Educativa sobre el procediment d'habilitació, modificació i no funcionament d'unitats específiques ubicades en centres ordinaris d'educació primària i educació secundària de titularitat de la Generalitat Valenciana per al curs 2022/23
+			  </a>
+		  </div>
 		</div>
 
 		<br />
