--- a/normativa.html
+++ b/normativa.html
@@ -661,8 +661,8 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 		  <a href="https://ceice.gva.es/va/web/inclusioeducativa/escolaritzacio"><button type="button" class="btn btn-light btn-sm" target="_blank">ESCOLARIT</button></a></div>
 		  <div class="col-sm-1"><span class="badge bg-light">NODOC</span></div>
 		  <div class="col-sm-8">
-			  <a href="https://ceice.gva.es/documents/169149987/175397189/Calendari_de_procediments_NESE_NCD_2023_2024.pdf" target="_blank">Habilitació, modificació i no funcionament unitats específiques, curs 2022-2023 / Instruccions de la directora general d'Inclusió Educativa sobre el procediment d'habilitació, modificació i no funcionament d'unitats específiques ubicades en centres ordinaris d'educació primària i educació secundària de titularitat de la Generalitat Valenciana per al curs 2022/23
-			  </a>
+			  <a href="https://ceice.gva.es/documents/169149987/175397189/Calendari_de_procediments_NESE_NCD_2023_2024.pdf" target="_blank">Calendari de procediments que afecten l’escolarització de l’alumnat amb necessitats específiques de suport
+educatiu i necessitats de compensació de desigualtats per al curs 2023-24</a>
 		  </div>
 		</div>
 
