Assignació matèries ESO-BAT

--- a/normativa.html
+++ b/normativa.html
@@ -168,6 +168,16 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 
 		<br />
 
+		<div class="row">
+		  <div class="col-sm-2">Assignació matèries ESO i BAT</div>
+		  <div class="col-sm-1"><span class="badge bg-info">ESO</span> <span class="badge bg-info">BAT</span></div>
+		  <div class="col-sm-8">
+			  <a href="https://www.boe.es/diario_boe/txt.php?id=BOE-A-2023-9553" target="_blank">Real Decreto 286/2023, de 18 de abril, por el que se regula la asignación de materias en Educación Secundaria Obligatoria y en Bachillerato a las especialidades de distintos cuerpos de funcionarios docentes, y se modifican diversas normas relativas al profesorado de enseñanzas no universitarias.</a>
+		  </div>
+
+		</div>
+		<br />
+
   </div>
   
   	<br />
