Ajustos altra vegada

--- a/normativa.html
+++ b/normativa.html
@@ -626,14 +626,14 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 				</a>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-sm-2">Productes de suport</div>
-		  	<div class="col-sm-1">
-				<span class="badge bg-danger">NEES</span>
-			</div>
 
 		<br />
 		
+		<div class="row">
+			<div class="col-sm-2">Productes de suport</div>
+		  	<div class="col-sm-1">
+				<span class="badge bg-danger">NESE</span>
+			</div>
 		  	<div class="col-sm-8">
 				<a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=4015&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
 					RESOLUCIÓ conjunta de 4 d'abril de 2023, de la directora general d'Inclusió Educativa i del director general de Centres Docents, per la qual es dicten instruccions per a la provisió i gestió de productes de suport per a l'alumnat amb necessitats educatives especials escolaritzat en centres educatius de titularitat de la Generalitat. [2023/4015]
